gaps in mobile view fixed and edit button aligned

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,5 +10,4 @@
   grid-gap: 20px 17px;
   padding: 0;
   margin: 0;
-  padding-top: 29px;
 }
