--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,12 +18,13 @@
 
 @media screen and (max-width: 480px) {
   .footer {
-    /* width: 282px; */
     width: 100%;
     font-weight: 400;
-    line-height: 16.94px;
     text-align: left;
     max-width: 320px;
     font-size: 14px;
+    line-height: 16.94px;
+    padding-top: 48px;
+    padding-bottom: 36px;
   }
 }
