--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,11 @@
 .header {
   padding-bottom: 40px;
-  border-bottom: 1px;
+  border-bottom: 1px solid #5454546a;
+}
+
+@media screen and (max-width: 480px) {
+  .header__logo-image {
+    width: 126px;
+    height: 24px;
+  }
 }
