--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,8 +11,6 @@
 }
 
 .page__content {
-  /* display: flex; 
-  flex-direction: column;*/
   min-height: 100vh;
   margin: 0 auto;
   max-width: 1280px;
