--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
+  padding-bottom: 47.25px;
   max-width: 880px;
   margin: 0 auto;
 }
@@ -54,6 +55,7 @@
   width: 400px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__description {
@@ -66,6 +68,7 @@
   padding-top: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__image {
@@ -75,40 +78,6 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
-}
-
-@media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .profile__image {
-    text-align: center;
-    margin: 0;
-  }
-
-  .profile__title {
-    margin: 0 auto;
-    text-align: center;
-    font-size: 22px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 100%;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -141,5 +110,71 @@
   .profile__add-button {
     margin: 0;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    padding-bottom: 0px;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 36px;
+  }
+
+  .profile__image {
+    text-align: center;
+    margin: 0;
+  }
+
+  .profile__title {
+    flex: 1;
+    margin: 0;
+    text-align: center;
+    font-size: 22px;
+    line-height: 26.63px;
+    padding-top: 26.25px;
+    padding-left: 39px;
+    align-self: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    line-height: 16.94px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    width: 100%;
+    height: 50px;
+    background: transparent url(../images/Add_Button_mobile.png) center
+      no-repeat;
+    border: 2px;
+    border-radius: 2px;
+    cursor: pointer;
+    padding-top: 36px;
+  }
+
+  .profile__add-button:hover {
+    opacity: 0.6;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    align-self: flex-end;
   }
 }
